Revert "switched to maven-shade plugin"
This reverts commit 57c1fd5841b25f0fb353ee8aadddbff24ba1ea65.